--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.5",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.7.1",
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
@@ -26,6 +27,7 @@
     "eslint-config-next": "13.0.6",
     "moment": "^2.29.4",
     "next": "13.0.6",
+    "next-auth": "^4.18.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
