--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://raymartevangelista@localhost:5432/raymartevangelista"
+# DATABASE_URL="postgres://raymartevangelista@localhost:5432/raymartevangelista"
