--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-# DATABASE_URL="postgres://raymartevangelista@localhost:5432/raymartevangelista"
+DATABASE_URL=postgresql://postgres:c5y6PFnxUvkoRTzXZm1K@containers-us-west-163.railway.app:7092/railway
