--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "prisma:studio": "npx dotenv -e .env.local -- prisma studio",
     "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@headlessui/react": "^1.7.5",
     "@next-auth/prisma-adapter": "^1.0.5",
