--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.5",
@@ -40,6 +40,7 @@
     "dotenv-cli": "^6.0.0",
     "postcss": "^8.4.19",
     "prisma": "^4.7.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1"
   }
 }
